tests/snapshots/plan_snapshots__an_ancestor_of_a_denylisted_destination_is_refused.snap
---
source: tests/plan_snapshots.rs
expression: out
---
## dest /home/u/.config
plan: switch to profile `new`

observed:
  real directory /home/u/.config

declined. nothing has been changed.

  [R4] /home/u/.config: contains `~/.config/uwsm`, which v1 will not manage under any circumstances. A link here would put it inside the profile too.

## dest /home/u/.local/share
plan: switch to profile `new`

observed:
  real directory /home/u/.local/share

declined. nothing has been changed.

  [R4] /home/u/.local/share: contains `~/.local/share/keyrings`, which v1 will not manage under any circumstances. A link here would put it inside the profile too.

## dest /home/u
plan: switch to profile `new`

observed:
  real directory /home/u

declined. nothing has been changed.

  [R4] /home/u: is your home directory or above it, which v1 will not manage: a link here would hand `~/.ssh`, `~/.config/uwsm` and every other denylisted path to the profile.

## dest /home
plan: switch to profile `new`

observed:
  real directory /home

declined. nothing has been changed.

  [R4] /home: is your home directory or above it, which v1 will not manage: a link here would hand `~/.ssh`, `~/.config/uwsm` and every other denylisted path to the profile.

## dest /
plan: switch to profile `new`

observed:
  real directory /

declined. nothing has been changed.

  [R4] /: is your home directory or above it, which v1 will not manage: a link here would hand `~/.ssh`, `~/.config/uwsm` and every other denylisted path to the profile.

## dest /home/u/.conf
plan: switch to profile `new`

observed:
  real directory /home/u/.conf

declined. nothing has been changed.

  [R4] /home/u/.conf: is a real directory, not the link ricepilot owns. Something (typically a rice installer) replaced the link. Re-linking would discard whatever it wrote; run `ricepilot doctor` and decide deliberately.
