tests/snapshots/plan_snapshots__shape_2_dangling_foreign_link.snap
---
source: tests/plan_snapshots.rs
expression: "render(\"hypr\", Shape::ForeignLink\n{ target: PathBuf::from(\"/home/u/gone/hypr\"), dangling: true, })"
---
plan: switch to profile `new`

observed:
  dangling foreign link /home/u/.config/hypr

declined. nothing has been changed.

  [R4] /home/u/.config/hypr: is a dangling foreign link, which ricepilot did not create. It cannot know what depends on it, so it will not replace it. Register it with `ricepilot adopt` or move it aside yourself.
